--- a/requirements.txt
+++ b/requirements.txt
@@ -1,141 +1,5 @@
-C:\Users\siva\Downloads>python-telegram-bot==20.8
-'python-telegram-bot' is not recognized as an internal or external command,
-operable program or batch file.
-
-C:\Users\siva\Downloads>supabase
-'supabase' is not recognized as an internal or external command,
-operable program or batch file.
-
-C:\Users\siva\Downloads>pip3 install -r requirements.txt
-Defaulting to user installation because normal site-packages is not writeable
-Collecting python-telegram-bot==20.3 (from -r requirements.txt (line 1))
-  Downloading python_telegram_bot-20.3-py3-none-any.whl.metadata (15 kB)
-Requirement already satisfied: supabase in c:\users\siva\appdata\roaming\python\python313\site-packages (from -r requirements.txt (line 2)) (2.15.2)
-Collecting httpx~=0.24.0 (from python-telegram-bot==20.3->-r requirements.txt (line 1))
-  Downloading httpx-0.24.1-py3-none-any.whl.metadata (7.4 kB)
-Requirement already satisfied: gotrue<3.0.0,>=2.11.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from supabase->-r requirements.txt (line 2)) (2.12.0)
-INFO: pip is looking at multiple versions of supabase to determine which version is compatible with other requirements. This could take a while.
-Collecting supabase (from -r requirements.txt (line 2))
-  Downloading supabase-2.15.1-py3-none-any.whl.metadata (11 kB)
-  Downloading supabase-2.15.0-py3-none-any.whl.metadata (11 kB)
-  Downloading supabase-2.14.0-py3-none-any.whl.metadata (11 kB)
-  Downloading supabase-2.13.0-py3-none-any.whl.metadata (10 kB)
-  Downloading supabase-2.12.0-py3-none-any.whl.metadata (10 kB)
-  Downloading supabase-2.11.0-py3-none-any.whl.metadata (10 kB)
-  Downloading supabase-2.10.0-py3-none-any.whl.metadata (10 kB)
-INFO: pip is still looking at multiple versions of supabase to determine which version is compatible with other requirements. This could take a while.
-  Downloading supabase-2.9.1-py3-none-any.whl.metadata (10 kB)
-  Downloading supabase-2.9.0-py3-none-any.whl.metadata (10 kB)
-  Downloading supabase-2.8.1-py3-none-any.whl.metadata (10 kB)
-Collecting postgrest<0.18.0,>=0.17.0 (from supabase->-r requirements.txt (line 2))
-  Downloading postgrest-0.17.2-py3-none-any.whl.metadata (3.4 kB)
-Requirement already satisfied: realtime<3.0.0,>=2.0.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from supabase->-r requirements.txt (line 2)) (2.4.3)
-Collecting storage3<0.9.0,>=0.8.0 (from supabase->-r requirements.txt (line 2))
-  Downloading storage3-0.8.2-py3-none-any.whl.metadata (1.8 kB)
-Collecting supafunc<0.7.0,>=0.6.0 (from supabase->-r requirements.txt (line 2))
-  Downloading supafunc-0.6.2-py3-none-any.whl.metadata (1.1 kB)
-Requirement already satisfied: typing-extensions<5.0.0,>=4.12.2 in c:\users\siva\appdata\roaming\python\python313\site-packages (from supabase->-r requirements.txt (line 2)) (4.13.2)
-INFO: pip is looking at multiple versions of gotrue to determine which version is compatible with other requirements. This could take a while.
-Collecting gotrue<3.0.0,>=2.7.0 (from supabase->-r requirements.txt (line 2))
-  Downloading gotrue-2.11.4-py3-none-any.whl.metadata (6.0 kB)
-  Downloading gotrue-2.11.3-py3-none-any.whl.metadata (6.0 kB)
-  Downloading gotrue-2.11.2-py3-none-any.whl.metadata (6.0 kB)
-  Downloading gotrue-2.11.1-py3-none-any.whl.metadata (6.0 kB)
-  Downloading gotrue-2.11.0-py3-none-any.whl.metadata (6.0 kB)
-  Downloading gotrue-2.10.0-py3-none-any.whl.metadata (6.0 kB)
-  Downloading gotrue-2.9.3-py3-none-any.whl.metadata (6.0 kB)
-INFO: pip is still looking at multiple versions of gotrue to determine which version is compatible with other requirements. This could take a while.
-  Downloading gotrue-2.9.2-py3-none-any.whl.metadata (6.0 kB)
-  Downloading gotrue-2.9.1-py3-none-any.whl.metadata (6.0 kB)
-Requirement already satisfied: pydantic<3,>=1.10 in c:\users\siva\appdata\roaming\python\python313\site-packages (from gotrue<3.0.0,>=2.7.0->supabase->-r requirements.txt (line 2)) (2.11.5)
-Requirement already satisfied: certifi in c:\users\siva\appdata\roaming\python\python313\site-packages (from httpx~=0.24.0->python-telegram-bot==20.3->-r requirements.txt (line 1)) (2025.1.31)
-Collecting httpcore<0.18.0,>=0.15.0 (from httpx~=0.24.0->python-telegram-bot==20.3->-r requirements.txt (line 1))
-  Downloading httpcore-0.17.3-py3-none-any.whl.metadata (18 kB)
-Requirement already satisfied: idna in c:\users\siva\appdata\roaming\python\python313\site-packages (from httpx~=0.24.0->python-telegram-bot==20.3->-r requirements.txt (line 1)) (3.10)
-Requirement already satisfied: sniffio in c:\users\siva\appdata\roaming\python\python313\site-packages (from httpx~=0.24.0->python-telegram-bot==20.3->-r requirements.txt (line 1)) (1.3.1)
-Requirement already satisfied: deprecation<3.0.0,>=2.1.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from postgrest<0.18.0,>=0.17.0->supabase->-r requirements.txt (line 2)) (2.1.0)
-INFO: pip is looking at multiple versions of postgrest to determine which version is compatible with other requirements. This could take a while.
-Collecting postgrest<0.18.0,>=0.17.0 (from supabase->-r requirements.txt (line 2))
-  Downloading postgrest-0.17.1-py3-none-any.whl.metadata (5.1 kB)
-  Downloading postgrest-0.17.0-py3-none-any.whl.metadata (5.1 kB)
-Requirement already satisfied: strenum<0.5.0,>=0.4.9 in c:\users\siva\appdata\roaming\python\python313\site-packages (from postgrest<0.18.0,>=0.17.0->supabase->-r requirements.txt (line 2)) (0.4.15)
-Requirement already satisfied: aiohttp<4.0.0,>=3.11.18 in c:\users\siva\appdata\roaming\python\python313\site-packages (from realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (3.12.2)
-Requirement already satisfied: python-dateutil<3.0.0,>=2.8.1 in c:\users\siva\appdata\roaming\python\python313\site-packages (from realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (2.9.0.post0)
-Requirement already satisfied: websockets<15,>=11 in c:\users\siva\appdata\roaming\python\python313\site-packages (from realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (14.2)
-INFO: pip is looking at multiple versions of storage3 to determine which version is compatible with other requirements. This could take a while.
-Collecting storage3<0.9.0,>=0.8.0 (from supabase->-r requirements.txt (line 2))
-  Downloading storage3-0.8.1-py3-none-any.whl.metadata (1.9 kB)
-  Downloading storage3-0.8.0-py3-none-any.whl.metadata (1.9 kB)
-INFO: pip is looking at multiple versions of supafunc to determine which version is compatible with other requirements. This could take a while.
-Collecting supafunc<0.7.0,>=0.6.0 (from supabase->-r requirements.txt (line 2))
-  Downloading supafunc-0.6.1-py3-none-any.whl.metadata (1.1 kB)
-  Downloading supafunc-0.6.0-py3-none-any.whl.metadata (1.1 kB)
-Requirement already satisfied: aiohappyeyeballs>=2.5.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from aiohttp<4.0.0,>=3.11.18->realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (2.6.1)
-Requirement already satisfied: aiosignal>=1.1.2 in c:\users\siva\appdata\roaming\python\python313\site-packages (from aiohttp<4.0.0,>=3.11.18->realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (1.3.2)
-Requirement already satisfied: attrs>=17.3.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from aiohttp<4.0.0,>=3.11.18->realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (25.3.0)
-Requirement already satisfied: frozenlist>=1.1.1 in c:\users\siva\appdata\roaming\python\python313\site-packages (from aiohttp<4.0.0,>=3.11.18->realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (1.6.0)
-Requirement already satisfied: multidict<7.0,>=4.5 in c:\users\siva\appdata\roaming\python\python313\site-packages (from aiohttp<4.0.0,>=3.11.18->realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (6.4.4)
-Requirement already satisfied: propcache>=0.2.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from aiohttp<4.0.0,>=3.11.18->realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (0.3.1)
-Requirement already satisfied: yarl<2.0,>=1.17.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from aiohttp<4.0.0,>=3.11.18->realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (1.20.0)
-Requirement already satisfied: packaging in c:\users\siva\appdata\roaming\python\python313\site-packages (from deprecation<3.0.0,>=2.1.0->postgrest<0.18.0,>=0.17.0->supabase->-r requirements.txt (line 2)) (25.0)
-Requirement already satisfied: h11<0.15,>=0.13 in c:\users\siva\appdata\roaming\python\python313\site-packages (from httpcore<0.18.0,>=0.15.0->httpx~=0.24.0->python-telegram-bot==20.3->-r requirements.txt (line 1)) (0.14.0)
-Requirement already satisfied: anyio<5.0,>=3.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from httpcore<0.18.0,>=0.15.0->httpx~=0.24.0->python-telegram-bot==20.3->-r requirements.txt (line 1)) (4.8.0)
-Requirement already satisfied: h2<5,>=3 in c:\users\siva\appdata\roaming\python\python313\site-packages (from httpx[http2]<0.28,>=0.24->gotrue<3.0.0,>=2.7.0->supabase->-r requirements.txt (line 2)) (4.2.0)
-Requirement already satisfied: annotated-types>=0.6.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from pydantic<3,>=1.10->gotrue<3.0.0,>=2.7.0->supabase->-r requirements.txt (line 2)) (0.7.0)
-Requirement already satisfied: pydantic-core==2.33.2 in c:\users\siva\appdata\roaming\python\python313\site-packages (from pydantic<3,>=1.10->gotrue<3.0.0,>=2.7.0->supabase->-r requirements.txt (line 2)) (2.33.2)
-Requirement already satisfied: typing-inspection>=0.4.0 in c:\users\siva\appdata\roaming\python\python313\site-packages (from pydantic<3,>=1.10->gotrue<3.0.0,>=2.7.0->supabase->-r requirements.txt (line 2)) (0.4.1)
-Requirement already satisfied: six>=1.5 in c:\users\siva\appdata\roaming\python\python313\site-packages (from python-dateutil<3.0.0,>=2.8.1->realtime<3.0.0,>=2.0.0->supabase->-r requirements.txt (line 2)) (1.17.0)
-Requirement already satisfied: hyperframe<7,>=6.1 in c:\users\siva\appdata\roaming\python\python313\site-packages (from h2<5,>=3->httpx[http2]<0.28,>=0.24->gotrue<3.0.0,>=2.7.0->supabase->-r requirements.txt (line 2)) (6.1.0)
-Requirement already satisfied: hpack<5,>=4.1 in c:\users\siva\appdata\roaming\python\python313\site-packages (from h2<5,>=3->httpx[http2]<0.28,>=0.24->gotrue<3.0.0,>=2.7.0->supabase->-r requirements.txt (line 2)) (4.1.0)
-Downloading python_telegram_bot-20.3-py3-none-any.whl (545 kB)
-   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 545.4/545.4 kB 2.1 MB/s eta 0:00:00
-Downloading supabase-2.8.1-py3-none-any.whl (16 kB)
-Downloading gotrue-2.9.1-py3-none-any.whl (48 kB)
-Downloading httpx-0.24.1-py3-none-any.whl (75 kB)
-Downloading postgrest-0.17.0-py3-none-any.whl (22 kB)
-Downloading storage3-0.8.0-py3-none-any.whl (16 kB)
-Downloading supafunc-0.6.0-py3-none-any.whl (6.6 kB)
-Downloading httpcore-0.17.3-py3-none-any.whl (74 kB)
-Installing collected packages: httpcore, httpx, python-telegram-bot, supafunc, storage3, postgrest, gotrue, supabase
-  Attempting uninstall: httpcore
-    Found existing installation: httpcore 1.0.7
-    Uninstalling httpcore-1.0.7:
-      Successfully uninstalled httpcore-1.0.7
-  Attempting uninstall: httpx
-    Found existing installation: httpx 0.28.1
-    Uninstalling httpx-0.28.1:
-      Successfully uninstalled httpx-0.28.1
-  WARNING: The script httpx.exe is installed in 'C:\Users\siva\AppData\Roaming\Python\Python313\Scripts' which is not on PATH.
-  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
-  Attempting uninstall: python-telegram-bot
-    Found existing installation: python-telegram-bot 13.15
-    Uninstalling python-telegram-bot-13.15:
-      Successfully uninstalled python-telegram-bot-13.15
-  Attempting uninstall: supafunc
-    Found existing installation: supafunc 0.9.4
-    Uninstalling supafunc-0.9.4:
-      Successfully uninstalled supafunc-0.9.4
-  Attempting uninstall: storage3
-    Found existing installation: storage3 0.11.3
-    Uninstalling storage3-0.11.3:
-      Successfully uninstalled storage3-0.11.3
-  Attempting uninstall: postgrest
-    Found existing installation: postgrest 1.0.2
-    Uninstalling postgrest-1.0.2:
-      Successfully uninstalled postgrest-1.0.2
-  Attempting uninstall: gotrue
-    Found existing installation: gotrue 2.12.0
-    Uninstalling gotrue-2.12.0:
-      Successfully uninstalled gotrue-2.12.0
-  Attempting uninstall: supabase
-    Found existing installation: supabase 2.15.2
-    Uninstalling supabase-2.15.2:
-      Successfully uninstalled supabase-2.15.2
-  WARNING: The script tests.exe is installed in 'C:\Users\siva\AppData\Roaming\Python\Python313\Scripts' which is not on PATH.
-  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
-Successfully installed gotrue-2.9.1 httpcore-0.17.3 httpx-0.24.1 postgrest-0.17.0 python-telegram-bot-20.3 storage3-0.8.0 supabase-2.8.1 supafunc-0.6.0
-
-[notice] A new release of pip is available: 24.3.1 -> 25.1.1
-[notice] To update, run: python.exe -m pip install --upgrade pip
-
-C:\Users\siva\Downloads>
+python-telegram-bot==20.3
+httpx==0.24.1
+supabase==1.0.3
+python-dotenv
+pytelegrambotapi
